tests/snapshots/snapshots__pane-header.snap
---
source: tests/snapshots.rs
expression: dump(&entry)
---
== dark-truecolor
Files & review                         4 changed
╸───────────────────────────────────────────────

---
r0 c0..14 fg=Foreground bg=Background bold
r0 c14..39 bg=Background
r0 c39..48 fg=Muted bg=Background
r1 c0..1 fg=Primary bg=Background
r1 c1..48 fg=Border bg=Background
r2 c0..48 bg=Background

== dark-graphite
Files & review                         4 changed
╸───────────────────────────────────────────────

---
r0 c0..14 fg=Foreground bg=Background bold
r0 c14..39 bg=Background
r0 c39..48 fg=Muted bg=Background
r1 c0..1 fg=Primary bg=Background
r1 c1..48 fg=Border bg=Background
r2 c0..48 bg=Background

== light-truecolor
Files & review                         4 changed
╸───────────────────────────────────────────────

---
r0 c0..14 fg=Foreground bg=Background bold
r0 c14..39 bg=Background
r0 c39..48 fg=Muted bg=Background
r1 c0..1 fg=Primary bg=Background
r1 c1..48 fg=Border bg=Background
r2 c0..48 bg=Background

== dark-256
Files & review                         4 changed
╸───────────────────────────────────────────────

---
r0 c0..14 fg=Foreground bg=Background bold
r0 c14..39 bg=Background
r0 c39..48 fg=Muted bg=Background
r1 c0..1 fg=Primary bg=Background
r1 c1..48 fg=Border bg=Background
r2 c0..48 bg=Background

== light-256
Files & review                         4 changed
╸───────────────────────────────────────────────

---
r0 c0..14 fg=Foreground bg=Background|Surface bold
r0 c14..39 bg=Background|Surface
r0 c39..48 fg=Muted bg=Background|Surface
r1 c0..1 fg=Primary bg=Background|Surface
r1 c1..48 fg=Border bg=Background|Surface
r2 c0..48 bg=Background|Surface

== ansi-16
Files & review                         4 changed
╸───────────────────────────────────────────────

---
r0 c0..14 bold
r0 c39..48 dim
r1 c0..1 fg=Primary dim
r1 c1..48 dim

== unknown-ground
Files & review                         4 changed
╸───────────────────────────────────────────────

---
r0 c0..14 bold
r0 c39..48 dim
r1 c0..1 fg=Primary dim
r1 c1..48 dim

== no-color
Files & review                         4 changed
╸───────────────────────────────────────────────

---
r0 c0..14 bold
r0 c39..48 dim
r1 c0..48 dim

== ascii
Files & review                         4 changed
>-----------------------------------------------

---
r0 c0..14 bold
r0 c39..48 dim
r1 c0..48 dim
