tests/snapshots/snapshots__pending-context.snap
---
source: tests/snapshots.rs
expression: dump(&entry)
---
== dark-truecolor
1 queued
✓ included / notes.md (4.2 kB)
◆ unconfirmed / draft.md
+2 more  Send now / Edit / Drop
---
r0 c0..8 fg=Primary bg=Background
r0 c8..40 bg=Background
r1 c0..1 fg=Live bg=Background
r1 c1..2 bg=Background
r1 c2..10 fg=Live bg=Background
r1 c10..13 bg=Background
r1 c13..21 fg=Foreground bg=Background
r1 c21..30 fg=Muted bg=Background
r1 c30..40 bg=Background
r2 c0..1 fg=Attention bg=Background
r2 c1..2 bg=Background
r2 c2..13 fg=Attention bg=Background
r2 c13..16 bg=Background
r2 c16..24 fg=Foreground bg=Background
r2 c24..40 bg=Background
r3 c0..9 fg=Muted bg=Background
r3 c9..31 fg=Primary bg=Background
r3 c31..40 bg=Background

== dark-graphite
1 queued
✓ included / notes.md (4.2 kB)
◆ unconfirmed / draft.md
+2 more  Send now / Edit / Drop
---
r0 c0..8 fg=Primary bg=Background
r0 c8..40 bg=Background
r1 c0..1 fg=Live bg=Background
r1 c1..2 bg=Background
r1 c2..10 fg=Live bg=Background
r1 c10..13 bg=Background
r1 c13..21 fg=Foreground bg=Background
r1 c21..30 fg=Muted bg=Background
r1 c30..40 bg=Background
r2 c0..1 fg=Attention bg=Background
r2 c1..2 bg=Background
r2 c2..13 fg=Attention bg=Background
r2 c13..16 bg=Background
r2 c16..24 fg=Foreground bg=Background
r2 c24..40 bg=Background
r3 c0..9 fg=Muted bg=Background
r3 c9..31 fg=Primary bg=Background
r3 c31..40 bg=Background

== light-truecolor
1 queued
✓ included / notes.md (4.2 kB)
◆ unconfirmed / draft.md
+2 more  Send now / Edit / Drop
---
r0 c0..8 fg=Primary bg=Background
r0 c8..40 bg=Background
r1 c0..1 fg=Live bg=Background
r1 c1..2 bg=Background
r1 c2..10 fg=Live bg=Background
r1 c10..13 bg=Background
r1 c13..21 fg=Foreground bg=Background
r1 c21..30 fg=Muted bg=Background
r1 c30..40 bg=Background
r2 c0..1 fg=Attention bg=Background
r2 c1..2 bg=Background
r2 c2..13 fg=Attention bg=Background
r2 c13..16 bg=Background
r2 c16..24 fg=Foreground bg=Background
r2 c24..40 bg=Background
r3 c0..9 fg=Muted bg=Background
r3 c9..31 fg=Primary bg=Background
r3 c31..40 bg=Background

== dark-256
1 queued
✓ included / notes.md (4.2 kB)
◆ unconfirmed / draft.md
+2 more  Send now / Edit / Drop
---
r0 c0..8 fg=Primary bg=Background
r0 c8..40 bg=Background
r1 c0..1 fg=Live bg=Background
r1 c1..2 bg=Background
r1 c2..10 fg=Live bg=Background
r1 c10..13 bg=Background
r1 c13..21 fg=Foreground bg=Background
r1 c21..30 fg=Muted bg=Background
r1 c30..40 bg=Background
r2 c0..1 fg=Attention bg=Background
r2 c1..2 bg=Background
r2 c2..13 fg=Attention bg=Background
r2 c13..16 bg=Background
r2 c16..24 fg=Foreground bg=Background
r2 c24..40 bg=Background
r3 c0..9 fg=Muted bg=Background
r3 c9..31 fg=Primary bg=Background
r3 c31..40 bg=Background

== light-256
1 queued
✓ included / notes.md (4.2 kB)
◆ unconfirmed / draft.md
+2 more  Send now / Edit / Drop
---
r0 c0..8 fg=Primary bg=Background|Surface
r0 c8..40 bg=Background|Surface
r1 c0..1 fg=Live bg=Background|Surface
r1 c1..2 bg=Background|Surface
r1 c2..10 fg=Live bg=Background|Surface
r1 c10..13 bg=Background|Surface
r1 c13..21 fg=Foreground bg=Background|Surface
r1 c21..30 fg=Muted bg=Background|Surface
r1 c30..40 bg=Background|Surface
r2 c0..1 fg=Attention bg=Background|Surface
r2 c1..2 bg=Background|Surface
r2 c2..13 fg=Attention bg=Background|Surface
r2 c13..16 bg=Background|Surface
r2 c16..24 fg=Foreground bg=Background|Surface
r2 c24..40 bg=Background|Surface
r3 c0..9 fg=Muted bg=Background|Surface
r3 c9..31 fg=Primary bg=Background|Surface
r3 c31..40 bg=Background|Surface

== ansi-16
1 queued
✓ included / notes.md (4.2 kB)
◆ unconfirmed / draft.md
+2 more  Send now / Edit / Drop
---
r0 c0..8 fg=Primary
r1 c0..1 fg=Live
r1 c2..10 fg=Live
r1 c21..30 dim
r2 c0..1 fg=Attention
r2 c2..13 fg=Attention
r3 c0..9 dim
r3 c9..31 fg=Primary

== unknown-ground
1 queued
✓ included / notes.md (4.2 kB)
◆ unconfirmed / draft.md
+2 more  Send now / Edit / Drop
---
r0 c0..8 fg=Primary
r1 c0..1 fg=Live
r1 c2..10 fg=Live
r1 c21..30 dim
r2 c0..1 fg=Attention
r2 c2..13 fg=Attention
r3 c0..9 dim
r3 c9..31 fg=Primary

== no-color
1 queued
✓ included / notes.md (4.2 kB)
◆ unconfirmed / draft.md
+2 more  Send now / Edit / Drop
---
r1 c21..30 dim
r3 c0..9 dim

== ascii
1 queued
+ included / notes.md (4.2 kB)
? unconfirmed / draft.md
+2 more  Send now / Edit / Drop
---
r1 c21..30 dim
r3 c0..9 dim
